@@ -1,6 +1,8 @@
 Changes in Version 0.2.3 (2021-xx-xx)
 =====================================
 - Installs numpy before build on newer versions of pip (thanks Michael Hirsch)
+plot
+ - Deprecate colourmaps; they were in matplotlib 1.5.
 tests
  - Add spacepy_testing module to provide helper functions for testing.
  - Add assertWarns and assertDoesntWarn context managers.
